[package]
name = "lotus"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A complete open source Office-Automation solution."
homepage = "https://github.com/saturn-xiv/lotus"
license = "MIT"

[profile.release]
lto = true

[dependencies]

[dependencies.pug]
path = "../pug"
# git = "https://github.com/saturn-xiv/pug.git"
default-features = false
features = ["postgresql", "redis", "rabbitmq", "sodium"]

# rocket = "0.4.0-rc.1"
# hyper = "0.11"
# futures = "0.1"
# clap = "2.32"
# error-chain = "0.12"
# lazy_static = "1.0"
# http = "0.1"
# cookie = "0.10"
# toml = "0.4"
# rust-ini = "0.10"
# csv = "1"
# byteorder = "1"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
# serde-xml-rs = "0.2"
# serde_yaml = "0.7"
# r2d2 = "0.8"
# r2d2_redis = "0.7"
# redis = "0.8"
# log = "0.4"
# env_logger = "0.5"
# log4rs = "0.8"
# sha2 = "0.7"
# md-5 = "0.7"
# base64 = "0.9"
# hex = "0.3"
# regex = "1.0"
# flate2 = "1.0"
# eui48 = "0.3"
# geo = "0.7"
# maxminddb = "0.9"
# lettre = "0.8"
# lettre_email = "0.8"
# mime = "0.3"
# rusoto_core = "0.32"
# rusoto_sqs = "0.32"
# rusoto_sns = "0.32"
# rusoto_s3 = "0.32"
# rusoto_elasticache = "0.32"
# validator = "0.6"
# validator_derive = "0.6"
# language-tags = "0.2"
# juniper = "0.9"
# robots_txt = "0.5"
# sitemap = "0.2"
# rss = "1.5"
# lapin-futures = "0.13"
# sodiumoxide = "*"
# mustache = "*"
#
# [dependencies.url]
# version = "1.7"
# features=["query_encoding"]
#
# [dependencies.diesel]
# version = "1.3"
# features = ["chrono", "postgres", "serde_json", "uuid", "network-address", "numeric", "r2d2", "128-column-tables"]
#
# [dependencies.chrono]
# version = "0.4"
# features = ["serde"]
#
# [dependencies.uuid]
# version = "0.6"
# features = ["v4"]
#
# [dependencies.rocket_contrib]
# version = "0.4.0-rc.1"
# default-features = false
# features = ["json", "uuid", "tera_templates"]
#
# [dependencies.frank_jwt]
# git = "https://github.com/GildedHonour/frank_jwt.git"
#
# [dependencies.rocket_cors]
# git = "https://github.com/lawliet89/rocket_cors"
